Fix layout alignment in title section for small to medium screen size breakpoints

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ p {
 }
 
 @media screen and (max-width: 1028px) {
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
 
